[package]
name = "with-async-context"
version = "0.1.0"
edition = "2021"
description = "A Rust library for managing contextual data across async tasks"
license = "MIT"
repository = "https://github.com/username/with-async-context"
documentation = "https://docs.rs/with-async-context"
readme = "README.md"
keywords = ["async", "context", "middleware", "web"]
categories = ["asynchronous", "web-programming"]

[dependencies]
pin-project = { version = "1.1.10" }
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
log = "0.4.20"

[dev-dependencies]
futures = "0.3.26"
